// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Styled component wrappers should style a component with no prop mapping 1`] = `
".stylix-1 {
  color: red;
  font-size: 13px; }"
`;

exports[`Styled component wrappers should style a component with prop mapping (rename component prop) 1`] = `
".stylix-1 {
  font-size: 13px; }"
`;

exports[`Styled component wrappers should style a component with prop mapping (rename css prop) 1`] = `
".stylix-1 {
  font-size: 13px; }"
`;
